<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accepted_friend">Accepted your friend request</string>
    <string name="access_denied">Access denied</string>
    <string name="account_deactivated">Your account is deactivated</string>
    <string name="account_deactivated_message">Your account is deactivated. To activate it back please login to vk.com web site.</string>
    <string name="account_name">cc.veselcraft.freekate.account</string>
    <string name="account_settings">Account Settings</string>
    <string name="accounts">Accounts</string>
    <string name="active">Active</string>
    <string name="ad">Advertisement</string>
    <string name="add">Add</string>
    <string name="add_account">Add Account</string>
    <string name="add_background_summary">Image to be used as background. Works only for transparent theme.</string>
    <string name="add_market">Add product</string>
    <string name="add_market_album">Create collection</string>
    <string name="add_playlist">Add to my playlists</string>
    <string name="add_shortcut_for_dialog">Add shortcut for dialog</string>
    <string name="add_shortcut_for_group">Add shortcut to home screen</string>
    <string name="add_to_album">Add to album</string>
    <string name="add_to_cache">Add to cache</string>
    <string name="add_to_group_album">Add to group album</string>
    <string name="add_to_my_docs">Add to my docs</string>
    <string name="add_wall_post">Wall post</string>
    <string name="add_wall_post2">Add post</string>
    <string name="added_post_to_your_wall">Added post to your wall</string>
    <string name="added_wall_photo">Added wall photo</string>
    <string name="advanced">Advanced</string>
    <string name="album_comments">Album comments</string>
    <string name="albums">Albums</string>
    <string name="albums_comments">Albums comments</string>
    <string name="all">All</string>
    <string name="all_avatars">All profile photos</string>
    <string name="all_genres">All genres</string>
    <string name="all_goods">All</string>
    <string name="all_photos">All photos</string>
    <string name="allow_messages">Allow messages</string>
    <string name="already_blacklisted">The user is blacklisted.</string>
    <string name="app_backgroung">Background image</string>
    <string name="app_name">FreeKate</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approved_wall_post">Approved your wall post</string>
    <string name="archive_post">Add to archive</string>
    <string name="archived_posts">Archived posts</string>
    <string name="attach">Attach</string>
    <string name="attachments_list">Attachments list</string>
    <string name="audio_attached">Audio attached</string>
    <string name="audio_cache">Audio Cache</string>
    <string name="audio_cache_dir_summary">Path to store cached audios</string>
    <string name="audio_cache_dir_title">Audio cache path</string>
    <string name="audio_download">Audio download</string>
    <string name="audio_playlist">Playlist</string>
    <string name="audio_timer">Audio sleep timer</string>
    <string name="audio_timer_summary">Stop music in %d minutes</string>
    <string name="audio_upload_failed">Audio upload failed</string>
    <string name="author">Author</string>
    <string name="authorization_required">Authorization required</string>
    <string name="background_music_limit">Background music limit reached</string>
    <string name="backup_settings">Backup settings</string>
    <string name="bdate_visibility_item_0">Hide birthday</string>
    <string name="bdate_visibility_item_1">Show birthday</string>
    <string name="bdate_visibility_item_2">Show month and day only</string>
    <string name="big_ava">Big photo in profile</string>
    <string name="birthday_today">"It's birthday time!"</string>
    <string name="blocked_till">Blocked till:</string>
    <string name="blur">Blur</string>
    <string name="bot_buttons">Bot buttons</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="broadcast">Broadcast</string>
    <string name="camera_save_summary">When uploading photo from camera save it to device gallery</string>
    <string name="camera_save_title">Save photo from camera</string>
    <string name="cant_login">"Can't sign in?"</string>
    <string name="captcha_failed">Failed to display captcha</string>
    <string name="captcha_instructions">"Tiered of captchas? Try to login to vk.com and send message there. They just want to ensure you're a human."</string>
    <string name="captcha_instructions_button">Instructions</string>
    <string name="card_style_summary">Card style for news</string>
    <string name="card_style_title">Cards in News</string>
    <string name="change_password">Change password</string>
    <string name="change_pin">Change PIN-code</string>
    <string name="changed_chat_name">changed chat title to</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_invite">Chat invite</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="check_now">Check now</string>
    <string name="check_time">Date seems to be incorrect. Please ensure current date and currect year are specified correctly in your device settings.</string>
    <string name="children">Children:</string>
    <string name="choose_cover">Choose cover</string>
    <string name="delete_thread">Delete dialog</string>
    <string name="dialog_attachments">Dialog attachments</string>
    <string name="exit">Exit</string>
    <string name="groups">Groups</string>
    <string name="hide_pinned_message">Hide pinned message</string>
    <string name="hint_show_in_contacts">Add title</string>
    <string name="label_administrator">Administrator</string>
    <string name="label_administrator_description">Can appoint and remove administrators, change the community name and URL</string>
    <string name="label_birthdays">Birthdays</string>
    <string name="label_block">Block</string>
    <string name="label_block_password_hint">You can change this code later in the Settings screen.</string>
    <string name="label_block_password_text">Enter password for block Kate Mobile</string>
    <string name="label_blocked_hint">If you forgot your unlock code you can clear application data in system settings.</string>
    <string name="label_blocked_text">Kate Mobile is blocked. Please enter unlock code</string>
    <string name="label_choose_access_level">Choose access level</string>
    <string name="label_close_unread">Close unread</string>
    <string name="label_disable_notification_this_chat">Disable notifications</string>
    <string name="label_edit_chat">Edit chat</string>
    <string name="label_editor">Editor</string>
    <string name="label_editor_description">Can post as community, add, remove and delete content, update community logo</string>
    <string name="label_faves">Bookmarks</string>
    <string name="label_history">History</string>
    <string name="label_leave_conversation">Leave conversation</string>
    <string name="label_make_screenshot">Make screenshot</string>
    <string name="label_menu_comments">Comments</string>
    <string name="label_menu_friends">Friends</string>
    <string name="label_menu_messages">Messages</string>
    <string name="label_menu_new_message">New Message</string>
    <string name="label_menu_profile">Profile</string>
    <string name="label_menu_search">Search</string>
    <string name="label_menu_settings">Settings</string>
    <string name="label_moderator">Moderator</string>
    <string name="label_moderator_description">"Can remove user generated content and manage the community's blacklist"</string>
    <string name="label_password">Password</string>
    <string name="label_repeat_password">Repeat password</string>
    <string name="label_save">Save</string>
    <string name="label_show_in_contacts">Show in Contacts</string>
    <string name="label_unblock">Unblock</string>
    <string name="news">News</string>
    <string name="open_link">Open link</string>
    <string name="replies">Replies</string>
    <string name="sd_warning">Application is installed to SD card, synchronization may be unstable.</string>
    <string name="search_by_date">Search by date</string>
    <string name="show_pinned_message">Show pinned message</string>
    <string name="start_sync">Synchronize contacts</string>
    <string name="stories">Stories</string>
    <string name="sync_photo_size">Photo size</string>
    <string name="sync_select">Select friends for synchronization</string>
    <string name="thread_start">Dialog start</string>
    <string name="title_audio_info">Audio</string>
    <string name="title_chat_background">Chat background</string>
    <string name="title_games">Games</string>
    <string name="title_videos_info">Video</string>
    <string name="unpin_message">Unpin message</string>
    <string name="voice_speed">Voice speed</string>
    <string name="with_pnones_only">Only users with phone numbers</string>
</resources>