<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?activity_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/header" />
    <TextView android:id="@id/sd_warning" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:text="@string/sd_warning" />
    <CheckBox android:id="@id/check_sync" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/start_sync" />
    <CheckBox android:id="@id/with_phones_only" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/with_pnones_only" />
    <FrameLayout android:id="@id/fl_button_bg" android:background="?attr_button_bg" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
        <Button android:textStyle="bold" android:textColor="@color/cs_button_text_white" android:id="@id/select_button" android:background="@drawable/ds_button_bg" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/sync_select" />
    </FrameLayout>
    <FrameLayout android:id="@id/fl_button_bg2" android:background="?attr_button_bg" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
        <Button android:textStyle="bold" android:textColor="@color/cs_button_text_white" android:id="@id/photo_button" android:background="@drawable/ds_button_bg" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/sync_photo_size" />
    </FrameLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <include layout="@layout/ad_container" />
    <include layout="@layout/footer" />
</LinearLayout>
