<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="?activity_background_tablet" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_news" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/news" android:singleLine="true" />
        <ImageView android:background="?attr_profile_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_messages" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_menu_messages" android:singleLine="true" />
            <TextView android:textSize="10.0sp" android:textStyle="bold" android:textColor="@color/solid_white" android:ellipsize="end" android:gravity="center" android:layout_gravity="right|center" android:id="@id/messages_counter" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="18.0dip" android:minWidth="18.0dip" android:singleLine="true" />
        </FrameLayout>
        <ImageView android:background="?attr_profile_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_friends" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_menu_friends" android:singleLine="true" />
        <ImageView android:background="?attr_profile_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_groups" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/groups" android:singleLine="true" />
        <ImageView android:background="?attr_profile_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_audio" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_audio_info" android:singleLine="true" />
        <ImageView android:background="?attr_profile_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_video" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_videos_info" android:singleLine="true" />
        <ImageView android:background="?attr_profile_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_comments" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_menu_comments" android:singleLine="true" />
        <ImageView android:background="?attr_profile_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_replies" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/replies" android:singleLine="true" />
        <ImageView android:background="?attr_profile_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_faves" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_faves" android:singleLine="true" />
        <ImageView android:background="?attr_profile_divider" android:layout_width="fill_parent" android:layout_height="3.0dip" />
        <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_profile" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_menu_profile" android:singleLine="true" />
        <TextView android:textSize="@dimen/text_size_small" android:ellipsize="end" android:id="@id/action_stories" android:background="?attr_main_menu_list_item" android:paddingLeft="20.0dip" android:paddingTop="11.0dip" android:paddingBottom="11.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/stories" android:singleLine="true" android:visibility="gone" />
    </LinearLayout>
    <ImageView android:layout_gravity="right" android:layout_width="8.0dip" android:layout_height="fill_parent" android:src="?attr_left_vertical_shadow" android:scaleType="fitXY" />
</FrameLayout>
