<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?activity_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/header" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:fillViewport="true" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/img_user_photo" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginLeft="@dimen/label_marginLeft" android:layout_marginTop="@dimen/label_marginLeft" android:layout_marginRight="12.0dip" android:layout_marginBottom="12.0dip" android:scaleType="centerCrop" />
                <LinearLayout android:layout_gravity="top" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginTop="@dimen/label_marginLeft" android:layout_marginRight="@dimen/label_marginLeft" android:layout_marginBottom="@dimen/label_marginLeft" android:layout_weight="1.0">
                    <com.perm.kate.ScaleTextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="?attr_item_text_color" android:ellipsize="end" android:id="@id/tv_user_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>
            <RadioGroup android:orientation="vertical" android:id="@id/rdgroup_manager_level" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="0.0dip" android:layout_marginBottom="15.0dip">
                <TextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="?attr_item_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/label_marginLeft" android:layout_marginTop="12.0dip" android:layout_marginRight="@dimen/label_marginLeft" android:layout_marginBottom="0.0dip" android:text="@string/label_choose_access_level" />
                <RadioButton android:textSize="@dimen/text_size_normal" android:textColor="?attr_item_title" android:id="@id/rb_moderator" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="0.0dip" android:text="@string/label_moderator" />
                <TextView android:textSize="@dimen/text_size_normal" android:textColor="?attr_item_subtitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/label_marginLeft2" android:layout_marginTop="0.0dip" android:layout_marginRight="@dimen/label_marginLeft" android:layout_marginBottom="0.0dip" android:text="@string/label_moderator_description" />
                <RadioButton android:textSize="@dimen/text_size_normal" android:textColor="?attr_item_title" android:id="@id/rb_editor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="0.0dip" android:text="@string/label_editor" />
                <TextView android:textSize="@dimen/text_size_normal" android:textColor="?attr_item_subtitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/label_marginLeft2" android:layout_marginTop="0.0dip" android:layout_marginRight="@dimen/label_marginLeft" android:layout_marginBottom="0.0dip" android:text="@string/label_editor_description" />
                <RadioButton android:textSize="@dimen/text_size_normal" android:textColor="?attr_item_title" android:id="@id/rb_administrator" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="0.0dip" android:text="@string/label_administrator" />
                <TextView android:textSize="@dimen/text_size_normal" android:textColor="?attr_item_subtitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/label_marginLeft2" android:layout_marginTop="0.0dip" android:layout_marginRight="@dimen/label_marginLeft" android:layout_marginBottom="0.0dip" android:text="@string/label_administrator_description" />
            </RadioGroup>
            <CheckBox android:textSize="@dimen/text_size_normal" android:textColor="?attr_item_title" android:id="@id/cb_is_contact" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="0.0dip" android:text="@string/label_show_in_contacts" />
            <LinearLayout android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
            <EditText android:id="@id/ed_contact_position" android:visibility="gone" android:nextFocusLeft="@id/ed_contact_position" android:nextFocusUp="@id/ed_contact_position" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="15.0dip" android:hint="@string/hint_show_in_contacts" />
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/ad_container" />
    <include layout="@layout/footer2" />
</LinearLayout>
